--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -58,7 +58,11 @@
     </div>
   </div>
   <div class="container-submit">
-    <p class="header">Estimate Price</p>
-    <p class="content">{{price}}</p>
+    <div class="estimate">
+      <p class="header">Estimate Price</p>
+      <p class="content">{{price}}</p>
+    </div>
+    <button class="button">Book Now</button>
   </div>
+
 </div>
