--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -2,7 +2,7 @@
   height: $height;
   box-shadow: 0px 5px 2px #f0f0f0;
   width: 100%;
-  border: 15px;
+  border-radius: 15px;
 }
 mat-icon {
   color: #807f7f;
@@ -10,6 +10,24 @@ mat-icon {
 }
 :host ::ng-deep .mat-icon {
   font-size: 18px;
+}
+.button {
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 30px;
+  background-color: white;
+  color: black;
+  border: 2px solid #4caf50;
+  font-family: Monserrat;
+  font-weight: bold;
+}
+.button:hover {
+  background-color: #4caf50;
+  color: white;
 }
 .container-header {
   display: flex;
@@ -61,7 +79,9 @@ mat-icon {
         }
       }
     }
-
+    .container-address:hover {
+      border: 1px solid #4caf50;
+    }
     .container-car {
       @include card(70px);
       display: flex;
@@ -116,14 +136,18 @@ mat-icon {
   .container-submit {
     box-shadow: 0px 3px 3px #f0f0f0;
     display: flex;
+    flex-direction: column;
     flex: 1;
     padding: 5px;
     justify-content: space-between;
     margin-top: 25px;
-    p {
-      font-size: 12px;
-      color: #000000;
-      font-weight: bold;
+    .estimate {
+      display: flex;
+      justify-content: space-between;
+      p {
+        font-weight: bold;
+        font-size: 13px;
+      }
     }
   }
 }
