--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -4,10 +4,6 @@
   width: 100%;
   border-radius: 15px;
 }
-mat-icon {
-  color: #807f7f;
-  font-size: 20px;
-}
 :host ::ng-deep .mat-icon {
   font-size: 18px;
 }
@@ -26,7 +22,6 @@ mat-icon {
   flex-direction: column;
   justify-content: flex-start;
   padding: 30px;
-  border: 1px solid red;
 
   .container-description {
     //height sudah ditentukan di html sesuai height screen
@@ -58,12 +53,15 @@ mat-icon {
             padding-left: 5px;
             font-weight: 2;
           }
+          mat-icon {
+            color: #807f7f;
+            font-size: 20px;
+            padding-top: 5px;
+          }
         }
       }
     }
-    .container-address:hover {
-      border: 1px solid #4caf50;
-    }
+
     .container-car {
       @include card(70px);
       display: flex;
@@ -104,6 +102,10 @@ mat-icon {
         flex: 1;
         justify-content: flex-end;
       }
+    }
+    .container-car:hover {
+      border: 1px solid #4caf50;
+      cursor: pointer;
     }
 
     .container-form {
