--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -151,4 +151,13 @@
       color: white;
     }
   }
+
+  @media only screen and (min-width: 600px) {
+    .container-body {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      padding: 30px;
+    }
+  }
 }
