--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -19,15 +19,14 @@
 }
 .container-body {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 30px;
-
+  flex-direction: row;
+  justify-content: center;
+  padding: 20px;
   .container-description {
     //height sudah ditentukan di html sesuai height screen
     display: flex;
     flex-direction: column;
-
+    padding: 10px;
     .container-address {
       @include card(70px);
       display: flex;
@@ -122,10 +121,11 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    padding: 5px;
-    justify-content: space-between;
-    margin-top: 25px;
+    padding: 10px;
+    margin-top: 15px;
+    max-width: 250px;
     .estimate {
+      @include card(100px);
       display: flex;
       justify-content: space-between;
       p {
@@ -156,8 +156,8 @@
     .container-body {
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
-      padding: 30px;
+      justify-content: center;
+      padding: 20px;
     }
   }
 }
