--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -158,4 +158,17 @@
     justify-content: center;
     padding: 20px;
   }
+  .button {
+    padding: 10px 32px;
+    text-align: center;
+    font-size: 14px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 30px;
+    background-color: white;
+    color: black;
+    border: 2px solid #4caf50;
+    font-weight: bold;
+  }
 }
