--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -1,6 +1,6 @@
 @mixin card($height: 20px) {
   height: $height;
-  box-shadow: 0px 5px 2px #f0f0f0;
+  box-shadow: 5px 5px 5px #f0f0f0;
   width: 100%;
   border-radius: 15px;
 }
@@ -17,6 +17,7 @@
     padding-left: 20px;
   }
 }
+
 .container-body {
   display: flex;
   flex-direction: row;
@@ -27,6 +28,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    min-width: 40%;
     .container-address {
       @include card(70px);
       display: flex;
@@ -123,6 +125,7 @@
     flex: 1;
     padding: 10px;
     margin-top: 15px;
+    min-width: 40%;
     .estimate {
       @include card(100px);
       display: flex;
@@ -151,24 +154,11 @@
     }
   }
 }
-@media only screen and (min-width: 700px) {
+@media only screen and (max-width: 700px) {
   .container-body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 20px;
-  }
-  .button {
-    padding: 10px 32px;
-    text-align: center;
-    font-size: 14px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 30px;
-    background-color: white;
-    color: black;
-    border: 2px solid #4caf50;
-    font-weight: bold;
   }
 }
