--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -32,15 +32,16 @@
     <div class="container-form">
       <mat-form-field style="margin-bottom: -0.5em">
         <mat-select name="selectedCategory" [(value)]="selectedCategory" placeholder="Service Category"
-        (selectionChange)="changeType($event.value)">
-          <mat-option [value]="'1'">Maintenance</mat-option>
-          <mat-option [value]="'2'">Repair</mat-option>
+          (selectionChange)="changeType($event.value)">
+          <mat-option *ngFor="let item of category" [value]="item.id.toString()">
+            {{item.name}}
+          </mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field style="margin-bottom: -0.5em">
         <mat-select name="selectedType" [(value)]="selectedType" placeholder="Service Type">
-          <mat-option *ngFor="let item of positionSelection" [value]="item.id.toString()">
+          <mat-option *ngFor="let item of category" [value]="item.id.toString()">
             {{item.name}}
           </mat-option>
         </mat-select>
