--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -54,8 +54,8 @@
         <mat-datepicker #dp></mat-datepicker>
       </mat-form-field>
 
-      <!-- <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime">
-      </material-timepicker> -->
+      <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime">
+      </material-timepicker>
 
     </div>
   </div>
