--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -62,7 +62,7 @@
   <div class="container-submit">
     <div class="estimate">
       <p class="header">Estimate Price</p>
-      <p class="content">{{price}}</p>
+      <p class="content">{{price|currency:'Rp ':'symbol':'0.0'}}</p>
     </div>
     <button class="button">Book Now</button>
   </div>
