--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -17,6 +17,10 @@
     padding-left: 20px;
     padding-bottom: 5px;
   }
+  mat-icon:hover {
+    border: 1px solid #4caf50;
+    cursor: pointer;
+  }
 }
 
 .container-body {
